# DL-Template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
.github/instructions/: .instructions.md
.github/workflows/: ci.yaml
configs/: _base.yaml  debug.yaml  eval.yaml  predict.yaml  train.yaml
configs/data/: cifar10.yaml  mnist.yaml
configs/debug/: default.yaml  limit.yaml  profiler.yaml
configs/experiment/: cifar_densenet.yaml  cifar_googlenet.yaml  cifar_resnet.yaml  cifar_resnet_preact.yaml  mnist_lr_search.yaml
configs/hparams_search/: cifar_optuna.yaml  mnist_optuna.yaml
configs/model/: cifar_densenet.yaml  cifar_googlenet.yaml  cifar_resnet.yaml  cifar_resnet_preact.yaml  mnist_cnn.yaml
data/: .gitignore  cifar-10-batches-py.dvc
scripts/: compare_runs.sh  download.sh  tensorboard.sh
src/: eval.py  predict.py  train.py
src/data/: cifar_datamodule.py  mnist_datamodule.py
src/models/: cifar_module.py  mnist_module.py
src/models/blocks/: Inception.py  __init__.py
src/models/components/: DenseNet.py  GoogleNet.py  ResNet.py  simple_cnn.py
src/utils/: __init__.py  compare_runs.py
